force-app/main/default/objects/Student__c/fields/Avg_rating__c.field-meta.xml
<CustomField>
    <fullName>Avg_rating__c</fullName>
    <formula>Sum_Of_all_Rating__c  /  Total_Number_or_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg. rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>