force-app/main/default/objects/Student__c/fields/Course_Optain__c.field-meta.xml
<CustomField>
    <fullName>Course_Optain__c</fullName>
    <label>Course Optain</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stream_Optain__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>React</fullName>
            </value>
            <value>
                <fullName>.Net</fullName>
            </value>
            <value>
                <fullName>IOS Developer</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>O365</fullName>
            </value>
            <value>
                <fullName>MW</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Middleware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>