force-app/main/default/objects/Student__c/fields/Fees_Deposited__c.field-meta.xml
<CustomField>
    <fullName>Fees_Deposited__c</fullName>
    <label>Fees Deposited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>