force-app/main/default/objects/Student__c/fields/Graduation__c.field-meta.xml
<CustomField>
    <fullName>Graduation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Graduation</label>
    <type>Checkbox</type>
</CustomField>