force-app/main/default/objects/Student__c/fields/Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Hobbies__c</fullName>
    <label>Hobbies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plying Cricket</fullName>
            </value>
            <value>
                <fullName>Traveling</fullName>
            </value>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>Dancing</fullName>
            </value>
            <value>
                <fullName>panting</fullName>
            </value>
            <value>
                <fullName>Drafting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>