force-app/main/default/objects/Student__c/fields/Initial_Fees__c.field-meta.xml
<CustomField>
    <fullName>Initial_Fees__c</fullName>
    <label>Initial Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>