force-app/main/default/objects/Student__c/fields/mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>mobile_Number__c</fullName>
    <label>mobile Number</label>
    <type>Phone</type>
</CustomField>