force-app/main/default/objects/Student__c/fields/Stream_Optain__c.field-meta.xml
<CustomField>
    <fullName>Stream_Optain__c</fullName>
    <label>Stream Optain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud Computing</fullName>
            </value>
            <value>
                <fullName>Core Programing</fullName>
            </value>
            <value>
                <fullName>Data Science</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>