force-app/main/default/objects/Student__c/fields/Student_state__c.field-meta.xml
<CustomField>
    <fullName>Student_state__c</fullName>
    <label>Student state</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>