force-app/main/default/objects/Student__c/fields/Sum_Of_all_Rating__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_all_Rating__c</fullName>
    <label>Sum Of all Rating</label>
    <summarizedField>Rating__c.Rating_out_of_10__c</summarizedField>
    <summaryForeignKey>Rating__c.Students__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>