force-app/main/default/objects/Student__c/fields/Total_Number_or_Rating__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_or_Rating__c</fullName>
    <label>Total Number or Rating</label>
    <summaryForeignKey>Rating__c.Students__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>