force-app/main/default/objects/Student__c/fields/X12__c.field-meta.xml
<CustomField>
    <fullName>X12__c</fullName>
    <label>12%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>