force-app/main/default/objects/Student__c/validationRules/Regfees_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Regfees_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Initial_Fees__c &lt; 5000</errorConditionFormula>
    <errorMessage>Application Fees should be at lest 5000</errorMessage>
</ValidationRule>